--- a/views/index.ejs
+++ b/views/index.ejs
@@ -196,6 +196,7 @@ input[type=text] {
 	<body> 
 		<div id="UploadBox">
 			<h2>Video Uploader</h2>
+			<a href='/chat' /> go to Chat</a>
 			<span id='UploadArea'>
 				<label for="FileBox">Choose A File: </label><input type="file" id="FileBox"><br>
 				<label for="NameBox">Name: </label><input type="text" id="NameBox"><br>
