--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -25,7 +25,7 @@
   </head>
   <body>
 	<div class="row">
-	<div class="container"  >
+	<div class="container">
 		Оцени последнее
 	<button type="button" id="bad" class="btn btn-default btn-lg">
   <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> 
@@ -34,8 +34,10 @@
   <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> 
 </button>
 		<span id="current_word"> </span>
+		
 	</div>
 	</div>
+	<div id="media"> </div> 
     <ul id="messages"></ul>
     <form action="">
 	 
@@ -67,7 +69,9 @@
 	  socket.on('word_bad', function(msg){
 		$('#messages').append($('<li>').text(msg).css("color","red"));
 	 });
-	  
+	 socket.on('media', function(file){
+		$('#media').append($('<a>').text("Файл игры").prop('href', 'http://localhost:8090/' + file));
+	 });
 	socket.on('word_good', function(msg){
 		$('#messages').append($('<li>').text(msg).css("color","green"));
 	 });
