--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -25,6 +25,7 @@
   </head>
   <body>
 	<div class="row">
+	<div class="alert alert-success" role="alert" id="answer"></div>
 	<div class="container">
 		Оцени последнее
 	<button type="button" id="bad" class="btn btn-default btn-lg">
@@ -32,6 +33,9 @@
 </button>
 <button type="button" id="good" class="btn btn-default btn-lg">
   <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> 
+</button>
+<button type="button" id="yes" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> 
 </button>
 		<span id="current_word"> </span>
 		
@@ -57,10 +61,14 @@
 			alert("bad word is " + last);
 			socket.emit('word_bad', $("#current_word").text());
 	  });
-	  
+	  $(document).on('click', '#yes', function(){
+			socket.emit('word_win', $("#current_word").text());
+	  });
       $('form').submit(function(){
           socket.emit('var', $('#m').val());
+		  $('#messages').append($('<li>').text($('#m').val()).css("color","aqua"));
           $('#m').val('');
+		  
           return false;
       });
       socket.on('var', function(msg){
@@ -74,6 +82,10 @@
 	 });
 	socket.on('word_good', function(msg){
 		$('#messages').append($('<li>').text(msg).css("color","green"));
+	 });
+	 socket.on('word_win', function(msg){
+		$('#answer').text(msg);
+		socket.emit('exit');
 	 });
 	  socket.on('estimate', function(msg){
 		alert(msg);
