--- a/views/leading_page.ejs
+++ b/views/leading_page.ejs
@@ -11,7 +11,7 @@
 	<br/>
 	<br/>
 	<form id="uploadPhoto" enctype = "multipart/form-data"  action="/startgame" method="post">
-		<input type="file" name="userPhoto" />
+		<input type="file" name="file" />
 	 	<input type="text" name="idphone"  />
 		<input type="text" name="word"  />
 		<input type="submit" value="Upload Image" name="submit">
