add first socket test on send to specify room

--- a/views/leading_page.ejs
+++ b/views/leading_page.ejs
@@ -6,6 +6,12 @@
 		<script src="/socket.io/socket.io.js"></script>
 	</head>
 	<body>  
+	<script src="/socket.io/socket.io.js"></script>
+    
+    <script>
+	  var last = "";
+      var socket = io();
+	</script>
 	<a href="/show"> show all </a>
 	<br/>
 	<br/>
